doc: updated paper

--- a/paper/pverify.bib
+++ b/paper/pverify.bib
@@ -1,4 +1,20 @@
-
+@misc{google_gemini25pro,
+  author       = {{Google DeepMind}},
+  title        = {Gemini 2.5 Pro},
+  year         = {2025},
+  howpublished = {\url{https://ai.google.dev/gemini-api/docs/models}},
+  note         = {Multimodal large language model},
+  urldate      = {2025-11-23}
+}
+@misc{openai_gpt5_system_card_2025,
+  author      = {{OpenAI}},
+  title       = {GPT-5 System Card},
+  institution = {OpenAI},
+  year        = {2025},
+  month       = aug,
+  url         = {https://cdn.openai.com/gpt-5-system-card.pdf},
+  urldate     = {2025-11-23}
+}
 @misc{deepseek-ai_deepseek-r1_2025,
 	title = {{DeepSeek}-{R1}: {Incentivizing} {Reasoning} {Capability} in {LLMs} via {Reinforcement} {Learning}},
 	shorttitle = {{DeepSeek}-{R1}},
